<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="uk.co.droidinactu.taskcoach.TaskDetailsActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/tabDescription_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/tabDescription_subject"/>

    <EditText
        android:id="@+id/tabDescription_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tabDescription_creationDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tabDescription_subject"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/tabDescription_description"/>

    <EditText
        android:id="@+id/tabDescription_creationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tabDescription_modificationDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/tabDescription_creationDate"
        android:inputType="date"/>

    <EditText
        android:id="@+id/tabDescription_modificationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/tabDescription_modificationDate"
        android:inputType="date"/>

</RelativeLayout>